bugfix: newer data shouldn't affect older observation
z_score should be calculated against available data so far,
not including newer data

to avoid reporting irregularity when the amount of data is too small,
we'll also pass in a `window` value, which would indicate how
large should the data be until we start to calculate irregularity

--- a/app/javascript/components/data_input/styles.module.css
+++ b/app/javascript/components/data_input/styles.module.css
@@ -2,6 +2,14 @@
   padding: 40px;
 }
 
-.threshold {
+.split {
+  @apply flex;
+}
+
+.split > label {
   @apply max-w-xs;
+}
+
+.threshold {
+  @apply mr-6;
 }
